--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -21,8 +21,8 @@ h1 {
   margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgb(0, 0, 0);
-  font-size: 100px;
-  font-weight: bold;
+  font-size: 60px;
+  // font-weight: bold;
 }
 
 .banner p {
