--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -9,8 +9,7 @@
   <div class="d-flex row">
     <% @lists.each do |list| %>
       <div class="card col-4 m-3", style="width: 18rem; height: 10rem; border-radius: 8px;">
-        <%# background image goes here%>
-        <%# <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
+        <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
         <h3 class="text-center"><%= link_to list.name, list_path(list), class: "card-title" %></h3>
       </div>
     <% end %>
