--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,22 +1,21 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,1),rgba(0,0,0,0.4)), url(https://www.shutterstock.com/image-photo/cinema-blank-wide-screen-people-600nw-2314929885.jpg); width: 100; height: 400px;">
   <div class="container d-flex justify-content-center">
-    <h1><strong>Movie Watch List</strong></h1>
+    <div>
+      <h1><strong>Movie Watch List</strong></h1>
+    </div>
   </div>
 </div>
 
 <div class="container w-75">
-
-  <div class="d-flex row">
+  <%= link_to 'create new list', 'lists/new', class: "btn btn-danger mx-2 my-4" %>
+  <div class="cards m-2">
     <% @lists.each do |list| %>
-      <div class="card col-4 m-3", style="width: 18rem; height: 10rem; border-radius: 8px;">
-        <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
-        <h3 class="text-center"><%= link_to list.name, list_path(list), class: "card-title" %></h3>
+      <div class="card-category d-flex" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= list.photo.attached? ? cl_image_path(list.photo.key) : image_path('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUY4BlF4FLmg8lQqg&usqp=CAU') %>')">
+        <h3 class="text-center"><%= link_to list.name, list_path(list), class: "text-decoration-none text-white" %></h3>
+        <%= link_to '', list_path(list), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "fa-solid fa-trash text-white ms-3 mb-2" %>
       </div>
     <% end %>
   </div>
 
-  <div>
-    <%= link_to 'create new list', 'lists/new', class: "btn btn-danger" %>
-  </div>
 
 </div>
