--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,17 +1,33 @@
-<div class="container">
-  <h1><%= @list.name %></h1>
-  <p>Find me in app/views/lists/show.html.erb</p>
 
-  <%= link_to 'Add bookmark', new_list_bookmark_path(@list) %>
+<div class="card-category d-flex" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= @list.photo.attached? ? cl_image_path(@list.photo.key) : image_path('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUY4BlF4FLmg8lQqg&usqp=CAU') %>')">
+  <div class="container d-flex justify-content-center">
+    <div>
+      <h1><strong><%= @list.name %></strong></h1>
+    </div>
+  </div>
+</div>
+
+
+
+
+<div class="container w-75">
+
+  <%= link_to 'Add bookmark', new_list_bookmark_path(@list), class: "btn btn-danger mx-2 my-4" %>
 
   <div>
     <% @list.bookmarks.each do |bookmark| %>
-      <h3><%= bookmark.movie.title %></h3>
-      <p><%= bookmark.comment%></p>
-      <%= link_to '', bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "fa-solid fa-trash mt-1" %>
+    <div class="card">
+
+      <%= cl_image_path(bookmark.movie.poster_url) %>
+
+        <h3><%= bookmark.movie.title %></h3>
+        <div>
+          <p><%= bookmark.comment%></p>
+          <%= link_to '', bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "fa-solid fa-trash mt-1" %>
+        </div>
+      </div>
     <% end %>
   </div>
-
 
   <%= link_to 'go back', '/lists' %>
 
