--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="card-category d-flex" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= @list.photo.attached? ? cl_image_path(@list.photo.key) : image_path('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUY4BlF4FLmg8lQqg&usqp=CAU') %>')">
+<div class="card-category d-flex" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= @list.photo.attached? ? cl_image_path(@list.photo.key) : image_path('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUY4BlF4FLmg8lQqg&usqp=CAU') %>'); width: 100; height: 300px;">
   <div class="container d-flex justify-content-center">
     <div>
       <h1><strong><%= @list.name %></strong></h1>
@@ -12,15 +12,14 @@
 
 <div class="container w-75">
 
-  <%= link_to 'Add bookmark', new_list_bookmark_path(@list), class: "btn btn-danger mx-2 my-4" %>
+  <%= link_to 'Add bookmark', new_list_bookmark_path(@list), class: "btn btn-danger mx-2 my-4 text-white" %>
+  <%= link_to 'go back', '/lists', class: "btn btn-primary m-3 round" %>
 
-  <div>
+  <div class="d-flex justify-content-between">
     <% @list.bookmarks.each do |bookmark| %>
-    <div class="card">
-
-      <%= cl_image_path(bookmark.movie.poster_url) %>
-
-        <h3><%= bookmark.movie.title %></h3>
+      <div class="card" style="width: 14rem;">
+        <%= image_tag(bookmark.movie.poster_url) %>
+        <h5><%= bookmark.movie.title %></h5>
         <div>
           <p><%= bookmark.comment%></p>
           <%= link_to '', bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "fa-solid fa-trash mt-1" %>
@@ -29,6 +28,6 @@
     <% end %>
   </div>
 
-  <%= link_to 'go back', '/lists' %>
+
 
 </div>
