--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -19,7 +19,7 @@
     <% @list.bookmarks.each do |bookmark| %>
       <div class="card p-2" style="width: 14rem;">
         <%= image_tag(bookmark.movie.poster_url) %>
-        <h5><%= bookmark.movie.title %></h5>
+        <h4><strong><%= bookmark.movie.title %></strong></h4>
         <div>
           <p><%= bookmark.comment%></p>
           <%= link_to 'remove bookmark', bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
