--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -15,9 +15,9 @@
   <%= link_to 'Add bookmark', new_list_bookmark_path(@list), class: "btn btn-danger mx-2 my-4 text-white" %>
   <%= link_to 'go back', '/lists', class: "btn btn-primary m-3 round" %>
 
-  <div class="d-flex justify-content-between">
+  <div class="d-flex justify-content-between col-12">
     <% @list.bookmarks.each do |bookmark| %>
-      <div class="card p-2 m-2" style="width: 14rem;">
+      <div class="card p-2 m-2" >
         <%= image_tag(bookmark.movie.poster_url) %>
         <h4><strong><%= bookmark.movie.title %></strong></h4>
         <div>
