styling and grid layout edited

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -44,12 +44,40 @@ h1 {
   font-size: 24px;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 5px;
+  border-radius: 6px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
-.cards {
+.list-cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
+}
+
+.movie-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 16px;
+
+  .movie-card {
+    padding: 8px;
+    background-color: white;
+    border-radius: 16px;
+    position: relative;
+
+    img {
+      width: 100%;
+      border-radius: 8px;
+      margin-bottom: 8px;
+    }
+
+    .trash-button {
+      position: absolute;
+      top: 16px;
+      right: 16px;
+      text-shadow: 1px 1px 5px black;
+    }
+
+  }
+
 }
