--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -15,14 +15,14 @@
   <%= link_to 'Add bookmark', new_list_bookmark_path(@list), class: "btn btn-danger mx-2 my-4 text-white" %>
   <%= link_to 'go back', '/lists', class: "btn btn-primary m-3 round" %>
 
-  <div class="d-flex justify-content-between col-12">
+  <div class="movie-cards col-12">
     <% @list.bookmarks.each do |bookmark| %>
-      <div class="card p-2 m-2" >
+      <div class="movie-card" >
         <%= image_tag(bookmark.movie.poster_url) %>
         <h4><strong><%= bookmark.movie.title %></strong></h4>
         <div>
           <p><%= bookmark.comment%></p>
-          <%= link_to 'remove bookmark', bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+          <%= link_to '', bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "fa-solid fa-trash text-white trash-button" %>
         </div>
       </div>
     <% end %>
