--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -8,14 +8,13 @@
 </div>
 
 
-
-
 <div class="container w-75">
 
-  <%= link_to 'Add bookmark', new_list_bookmark_path(@list), class: "btn btn-danger mx-2 my-4 text-white" %>
-  <%= link_to 'go back', '/lists', class: "btn btn-primary m-3 round" %>
+  <%= link_to 'Add bookmark', new_list_bookmark_path(@list), class: "btn btn-danger my-4 text-white" %>
+  <%= link_to 'go back', '/lists', class: "btn btn-primary ms-2 round" %>
 
   <div class="movie-cards col-12">
+
     <% @list.bookmarks.each do |bookmark| %>
       <div class="movie-card" >
         <%= image_tag(bookmark.movie.poster_url) %>
@@ -26,8 +25,7 @@
         </div>
       </div>
     <% end %>
+
   </div>
-
-
 
 </div>
